# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  chip8.cpp  chip8.h  main.cpp  window.cpp  window.h
test/: CMakeLists.txt  chip8.test.cpp
